--- a/templates/_icons.scss
+++ b/templates/_icons.scss
@@ -1,11 +1,12 @@
 @charset "utf-8";
+$fontPath:'<%= fontPath %>';
 @font-face {
 	font-family: "<%= fontName %>";
-	src: url('<%= fontPath %><%= fontName %>.eot');
-	src: url('<%= fontPath %><%= fontName %>.eot?#iefix') format('eot'),
-		url('<%= fontPath %><%= fontName %>.woff') format('woff'),
-		url('<%= fontPath %><%= fontName %>.ttf') format('truetype'),
-		url('<%= fontPath %><%= fontName %>.svg#<%= fontName %>') format('svg');
+	src: url('#{$fontPath}<%= fontName %>.eot');
+	src: url('#{$fontPath}<%= fontName %>.eot?#iefix') format('eot'),
+		url('#{$fontPath}<%= fontName %>.woff') format('woff'),
+		url('#{$fontPath}<%= fontName %>.ttf') format('truetype'),
+		url('#{$fontPath}<%= fontName %>.svg#<%= fontName %>') format('svg');
 }
 
 @mixin <%= cssClass%>-styles {
