--- a/templates/_icons2.scss
+++ b/templates/_icons2.scss
@@ -8,18 +8,18 @@ $fontPath:'<%= fontPath %>';
 }
 
 @font-face {font-family: "<%= fontName %>";
-  src: url('#{$fontPath}iconfont.eot'); /* IE9*/
-  src: url('#{$fontPath}iconfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('#{$fontPath}iconfont.woff') format('woff'), /* chrome、firefox */
-  url('#{$fontPath}iconfont.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-  url('#{$fontPath}iconfont.svg#gmIcon') format('svg'); /* iOS 4.1- */
+  src: url('#{$fontPath}<%= fontName %>.eot'); /* IE9*/
+  src: url('#{$fontPath}<%= fontName %>.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('#{$fontPath}<%= fontName %>.woff') format('woff'), /* chrome、firefox */
+  url('#{$fontPath}<%= fontName %>.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+  url('#{$fontPath}<%= fontName %>.svg#gmIcon') format('svg'); /* iOS 4.1- */
 }
 
 .<%= cssClass %>{
   @include icon-font-base;
 }
 <% _.each(glyphs, function(glyph) { %>
-  .<%= glyph.fileName %>:before {
-     content: "\<%= glyph.codePoint %>";
+ .<%= cssClass %>-<%= glyph.fileName %>:before {
+  content: "\<%= glyph.codePoint %>";
 }
 <% }); %>
