--- a/templates/demoTemplate.html
+++ b/templates/demoTemplate.html
@@ -2,18 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>IconFont</title>
+    <title><%=htmlTemplate.templateTitle%></title>
     <style>
         *{margin: 0;padding: 0;list-style: none;}
-        /*
-        KISSY CSS Reset
-        理念：1. reset 的目的不是清除浏览器的默认样式，这仅是部分工作。清除和重置是紧密不可分的。
-        2. reset 的目的不是让默认样式在所有浏览器下一致，而是减少默认样式有可能带来的问题。
-        3. reset 期望提供一套普适通用的基础样式。但没有银弹，推荐根据具体需求，裁剪和修改后再使用。
-        特色：1. 适应中文；2. 基于最新主流浏览器。
-        维护：玉伯<lifesinger@gmail.com>, 正淳<ragecarrier@gmail.com>
-         */
-
         /** 清除内外边距 **/
         body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, /* structural elements 结构元素 */
         dl, dt, dd, ul, ol, li, /* list elements 列表元素 */
@@ -102,8 +93,9 @@
 </head>
 <body>
 <div class="main">
-    <h1>IconFont 图标</h1>
+    <h1><%=htmlTemplate.templateTitle%></h1>
     <ul class="icon_lists clear">
+        <%%>
         <% _.each(glyphs, function(glyph) { %>
         <li>
             <i class="icon <%= cssClass%> <%= cssClass%>-<%= glyph.fileName %>"></i>
@@ -126,16 +118,16 @@
 </pre>
         第二步：定义使用iconfont的样式
             <pre>
-.gmIcon{
+.<%= cssClass%>{
     font-family:"<%= fontName %>" !important;
     font-size:16px;font-style:normal;
     -webkit-font-smoothing: antialiased;
     -webkit-text-stroke-width: 0.2px;
     -moz-osx-font-smoothing: grayscale;}
 </pre>
-        第三步：挑选相应图标并获取相应class，应用于页面,【gm-qq】=【gm-】前缀+【每个图标的第三行的class,即.qq】
+        第三步：挑选相应图标并获取相应class，应用于页面,【<%= cssClass%>-xxxx】=【<%= cssClass%>-】前缀+【每个图标的第三行的class】
 <pre>
-&lt;i class="gmIcon gm-qq"&gt;&lt;/i&gt;
+&lt;i class="<%= cssClass%> gm-xxxx"&gt;&lt;/i&gt;
 </pre>
     </div>
 </div>
