--- a/templates/demoTemplate.html
+++ b/templates/demoTemplate.html
@@ -124,7 +124,7 @@
     -webkit-text-stroke-width: 0.2px;
     -moz-osx-font-smoothing: grayscale;}
 </pre>
-        第三步：挑选相应图标并获取相应class，应用于页面,【<%= cssClass%>-xxxx】=【<%= cssClass%>-】前缀+【每个图标的第三行的class】
+        第三步：挑选相应图标并获取相应class，应用于页面,【<%= cssClass%>-xxxx】=【<%= cssClass%>-】前缀+【每个图标对应的class】
 <pre>
 &lt;i class="<%= cssClass%> gm-xxxx"&gt;&lt;/i&gt;
 </pre>
