修改模板文件

--- a/templates/demoTemplate.html
+++ b/templates/demoTemplate.html
@@ -129,6 +129,7 @@
 &lt;i class="<%= cssClass%> gm-xxxx"&gt;&lt;/i&gt;
 </pre>
     </div>
+    <p style="color: grey"> 此页面模板来自 <a href="http://www.iconfont.cn">www.iconfont.cn</a>,侵权则删</p>
 </div>
 </body>
 </html>
